# jude

./: .gitignore  .mcp.json  CLAUDE.md  IMPLEMENTATION_PLAN_OUTPUT_SCHEMAS.md  MULTI_LANGUAGE_SUPPORT.md  README.md
.claude/: CONTEXT.md  PHASE-4.5.md  PROMPT-ENGINE.md  settings.local.json
.github/workflows/: publish-mcp-server.yml  publish-prompt-engine.yml  publish-repo-index.yml
mcp-server/: README.md  pyproject.toml
mcp-server/repo_index_mcp/: __init__.py  connection.py  serializers.py  server.py
prompt-engine/: DOCS.md  README.md  pyproject.toml
prompt-engine/prompt_engine/: __init__.py  budget.py  cli.py  compiler.py  config.py  contracts.py  intent.py  output_serializer.py  policy.py  presets.py  retrieval.py  schemas.py  task.py  taxonomy.py  validator.py
prompt-engine/tests/: test_retrieval.py  test_schemas.py
repo-index/: CONTEXT.md  LICENSE  PUBLISHING.md  README.md  pyproject.toml
repo-index/repo_index/: __init__.py  cli.py  cli_metrics.py  db.py  events.py  git.py  graph.py  indexer.py  metrics.py  ranking.py  resolver.py  retrieval.py  scanner.py  scopes.py  symbol_table.py  watcher.py
repo-index/repo_index/parsers/: __init__.py  base.py  go.py  javascript.py  python.py
repo-index/tests/: test_branch.py  test_go_parser.py  test_indexer.py  test_javascript_parser.py  test_metrics.py  test_python_parser.py  test_resolution.py  test_retrieval.py  test_watcher.py
