[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-index-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
]

[project.scripts]
repo-index-mcp = "repo_index_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["repo_index_mcp*"]
