[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jude-repo-index-mcp"
version = "0.1.0"
description = "MCP server for jude-repo-index — deterministic repository intelligence for AI agents"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Aryan Walia", email = "p0riya003@gmail.com"}]
requires-python = ">=3.10"
keywords = ["mcp", "model-context-protocol", "ai-agents", "repository", "code-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0",
    "jude-repo-index>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/aryanwalia2003/jude"
Repository = "https://github.com/aryanwalia2003/jude"
Issues = "https://github.com/aryanwalia2003/jude/issues"
Documentation = "https://github.com/aryanwalia2003/jude/tree/main/mcp-server"

[project.scripts]
repo-index-mcp = "repo_index_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["repo_index_mcp*"]
