[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-engine"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
    "rich>=13",
]

[project.scripts]
ai = "prompt_engine.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["prompt_engine*"]
