[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-index"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
    "rich>=13",
    "tree-sitter>=0.21",
    "tree-sitter-language-pack>=0.0.1",
    "networkx>=3",
    "watchdog>=4",
]

[project.scripts]
repo-index = "repo_index.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["repo_index*"]
