[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jude-repo-index"
version = "0.1.0"
description = "Lightning-fast, deterministic repository indexing and retrieval for AI agents"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Aryan Walia", email = "p0riya003@gmail.com"}]
requires-python = ">=3.10"
keywords = ["ast", "indexing", "code-analysis", "repository", "ai-agents", "llm", "tree-sitter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "typer>=0.9",
    "rich>=13",
    "tree-sitter>=0.21",
    "tree-sitter-language-pack>=0.0.1",
    "networkx>=3",
    "watchdog>=4",
]

[project.urls]
Homepage = "https://github.com/aryanwalia2003/jude"
Repository = "https://github.com/aryanwalia2003/jude"
Issues = "https://github.com/aryanwalia2003/jude/issues"
Documentation = "https://github.com/aryanwalia2003/jude/tree/main/repo-index"

[project.scripts]
repo-index = "repo_index.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["repo_index*"]
